Updating xrefs with Community paths. Removing selinux K3s file added in error.
Signed-off-by: Sunil Singh <sunil.singh@suse.com>

--- a/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/docker-install-commands.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/docker-install-commands.adoc
@@ -11,7 +11,7 @@ The Docker installation is for Rancher users who want to test out Rancher.
 
 Instead of running on a Kubernetes cluster, you install the Rancher server component on a single node using a `docker run` command. Since there is only one node and a single Docker container, if the node goes down, there is no copy of the etcd data available on other nodes and you will lose all the data of your Rancher server.
 
-The backup application can be used to migrate the Rancher server from a Docker install to a Kubernetes install using xref:../../../../how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc[these steps.]
+The backup application can be used to migrate the Rancher server from a Docker install to a Kubernetes install using xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc[these steps.]
 
 For security purposes, SSL (Secure Sockets Layer) is required when using Rancher. SSL secures all Rancher network communication, like when you login or interact with a cluster.
 
@@ -30,9 +30,8 @@ For security purposes, SSL (Secure Sockets Layer) is required when using Rancher
 [NOTE]
 .Do you want to..
 ====
-
-* Configure custom CA root certificate to access your services? See xref:../../resources/custom-ca-root-certificates.adoc[Custom CA root certificate].
-* Record all transactions with the Rancher API? See xref:../../../../reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_api_audit_log[API Auditing].
+* Configure custom CA root certificate to access your services? See xref:getting-started/installation-and-upgrade/resources/custom-ca-root-certificates.adoc[Custom CA root certificate].
+* Record all transactions with the Rancher API? See xref:reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_api_audit_log[API Auditing].
 ====
 
 
@@ -54,10 +53,10 @@ Log into your Linux host, and then run the installation command below. When ente
 | Your private registry URL and port.
 
 | `<RANCHER_VERSION_TAG>`
-| The release tag of the xref:../../installation-references/helm-chart-options.adoc[Rancher version] that you want to install.
+| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to install.
 |===
 
-Privileged access is xref:./install-rancher-ha.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-rancher-ha.adoc#_privileged_access_for_rancher[required.]
 
 ----
 docker run -d --restart=unless-stopped \
@@ -84,7 +83,7 @@ In development or testing environments where your team will access your Rancher 
 From a computer with an internet connection, create a self-signed certificate using https://www.openssl.org/[OpenSSL] or another method of your choice.
 
 * The certificate files must be in PEM format.
-* In your certificate file, include all intermediate certificates in the chain. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:../rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
+* In your certificate file, include all intermediate certificates in the chain. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
 ====
 
 
@@ -109,10 +108,10 @@ After creating your certificate, log into your Linux host, and then run the inst
 | Your private registry URL and port.
 
 | `<RANCHER_VERSION_TAG>`
-| The release tag of the xref:../../installation-references/helm-chart-options.adoc[Rancher version] that you want to install.
+| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to install.
 |===
 
-Privileged access is xref:./install-rancher-ha.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-rancher-ha.adoc#_privileged_access_for_rancher[required.]
 
 ----
 docker run -d --restart=unless-stopped \
@@ -161,7 +160,7 @@ After obtaining your certificate, log into your Linux host, and then run the ins
 | Your private registry URL and port.
 
 | `<RANCHER_VERSION_TAG>`
-| The release tag of the xref:../../installation-references/helm-chart-options.adoc[Rancher version] that you want to install.
+| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to install.
 |===
 
 [NOTE]
@@ -171,7 +170,7 @@ Use the `--no-cacerts` as argument to the container to disable the default CA ce
 ====
 
 
-Privileged access is xref:./install-rancher-ha.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-rancher-ha.adoc#_privileged_access_for_rancher[required.]
 
 ----
 docker run -d --restart=unless-stopped \
