--- a/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc
@@ -12,7 +12,7 @@ endif::[]
 **Docker installs are not supported in production environments.** These instructions are provided for testing and development purposes only. Please don't use this method to install Rancher in production environments.
 ====
 
-If a Rancher upgrade does not complete successfully, you'll have to roll back to your Rancher setup that you were using before xref:upgrade-docker-installed-rancher.adoc[Docker Upgrade]. Rolling back restores:
+If a Rancher upgrade does not complete successfully, you'll have to roll back to your Rancher setup that you were using before xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc[Docker Upgrade]. Rolling back restores:
 
 * Your previous version of Rancher.
 * Your data backup created before upgrade.
@@ -81,9 +81,9 @@ For example, if you were running Rancher v2.0.5 before upgrade, pull v2.0.5.
 +
 You can obtain the name for your Rancher container by entering `docker ps`.
 
-. Move the backup tarball that you created during completion of xref:upgrade-docker-installed-rancher.adoc[Docker Upgrade] onto your Rancher Server. Change to the directory that you moved it to. Enter `dir` to confirm that it's there.
+. Move the backup tarball that you created during completion of xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher/upgrade-docker-installed-rancher.adoc[Docker Upgrade] onto your Rancher Server. Change to the directory that you moved it to. Enter `dir` to confirm that it's there.
 +
-If you followed the naming convention we suggested in xref:upgrade-docker-installed-rancher.adoc[Docker Upgrade], it will have a name similar to  (`rancher-data-backup-<RANCHER_VERSION>-<DATE>.tar.gz`).
+If you followed the naming convention we suggested in xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher/upgrade-docker-installed-rancher.adoc[Docker Upgrade], it will have a name similar to  (`rancher-data-backup-<RANCHER_VERSION>-<DATE>.tar.gz`).
 
 . Run the following command to replace the data in the `rancher-data` container with the data in the backup tarball, replacing the placeholder. Don't forget to close the quotes.
 +
@@ -103,7 +103,7 @@ If you followed the naming convention we suggested in xref:upgrade-docker-instal
  rancher/rancher:<PRIOR_RANCHER_VERSION>
 ----
 +
-Privileged access is xref:index.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
 +
 [WARNING]
 ====
