--- a/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc
@@ -16,8 +16,8 @@ The following instructions will guide you through upgrading a Rancher server tha
 
 == Prerequisites
 
-* **Review the xref:../../install-upgrade-on-a-kubernetes-cluster/upgrades.adoc#_known_upgrade_issues[known upgrade issues]** section in the Rancher documentation for the most noteworthy issues to consider when upgrading Rancher. A more complete list of known issues for each Rancher version can be found in the release notes on https://github.com/rancher/rancher/releases[GitHub] and on the https://forums.rancher.com/c/announcements/12[Rancher forums]. Note that upgrades to or from any chart in the link:../../resources/choose-a-rancher-version.md#helm-chart-repositories[rancher-alpha repository] aren't supported.
-* **For xref:../air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[air gap installs only,] collect and populate images for the new Rancher server version**. Follow the guide to xref:../air-gapped-helm-cli-install/publish-images.adoc[populate your private registry] with the images for the Rancher version that you want to upgrade to.
+* **Review the xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades.adoc#_known_upgrade_issues[known upgrade issues]** section in the Rancher documentation for the most noteworthy issues to consider when upgrading Rancher. A more complete list of known issues for each Rancher version can be found in the release notes on https://github.com/rancher/rancher/releases[GitHub] and on the https://forums.rancher.com/c/announcements/12[Rancher forums]. Note that upgrades to or from any chart in the link:../../resources/choose-a-rancher-version.md#helm-chart-repositories[rancher-alpha repository] aren't supported.
+* **For xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[air gap installs only,] collect and populate images for the new Rancher server version**. Follow the guide to xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/publish-images.adoc[populate your private registry] with the images for the Rancher version that you want to upgrade to.
 
 == Placeholder Review
 
@@ -72,7 +72,7 @@ You can obtain `<RANCHER_CONTAINER_TAG>` and `<RANCHER_CONTAINER_NAME>` by loggi
 
 [WARNING]
 ====
-Rancher upgrades to version 2.12.0 and later will be blocked if any RKE1-related resources are detected, as the Rancher Kubernetes Engine (RKE/RKE1) is end of life as of *July 31, 2025*. For detailed cleanup and recovery steps, refer to the <<_rke1_resource_validation_and_upgrade_requirements_in_rancher_v212,RKE1 Resource Validation and Upgrade Requirements in Rancher v2.12>>.
+Rancher upgrades to version 2.12.0 and later will be blocked if any RKE1-related resources are detected, as the Rancher Kubernetes Engine (RKE/RKE1) is end of life as of *July 31, 2025*. For detailed cleanup and recovery steps, refer to the <<_rke1_resource_validation_and_upgrade_requirements_in_rancher_v2_12,RKE1 Resource Validation and Upgrade Requirements in Rancher v2.12>>.
 ====
 
 
@@ -126,7 +126,7 @@ Pull the image of the Rancher version that you want to upgrade to.
 | Placeholder | Description
 
 | `<RANCHER_VERSION_TAG>`
-| The release tag of the xref:../../installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.
+| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.
 |===
 
 ----
@@ -143,11 +143,11 @@ Start a new Rancher server container using the data from the `rancher-data` cont
 ====
 
 
-If you used a proxy, see xref:../../../../reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc[HTTP Proxy Configuration.]
+If you used a proxy, see xref:reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc[HTTP Proxy Configuration.]
 
-If you configured a custom CA root certificate to access your services, see xref:../../../../reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_custom_ca_certificate[Custom CA root certificate.]
+If you configured a custom CA root certificate to access your services, see xref:reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_custom_ca_certificate[Custom CA root certificate.]
 
-If you are recording all transactions with the Rancher API, see xref:../../../../reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_api_audit_log[API Auditing]
+If you are recording all transactions with the Rancher API, see xref:reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_api_audit_log[API Auditing]
 
 To see the command to use when starting the new Rancher server container, choose from the following options:
 
@@ -176,7 +176,7 @@ If you have selected to use the Rancher generated self-signed certificate, you a
 ! Placeholder ! Description
 
 ! <RANCHER_VERSION_TAG>
-! The release tag of the xref:../../installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
+! The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
 
 !===
 
@@ -218,7 +218,7 @@ Reminder of the Cert Prerequisite: The certificate files must be in PEM format. 
 ! The path to the certificate authority's certificate.
 
 ! `<RANCHER_VERSION_TAG>`
-! The release tag of the xref:../../installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
+! The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
 
 !===
 
@@ -245,7 +245,7 @@ Privileged access is xref:getting-started/installation-and-upgrade/other-install
 If you have selected to use a certificate signed by a recognized CA, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container and need to have access to the same certificates that you had originally installed with. Remember to include `--no-cacerts` as an argument to the container to disable the default CA certificate generated by Rancher. 
 
 [NOTE]
-Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates provided by the recognized CA. Order your certificates with your certificate first, followed by the intermediates. For an example, see [Certificate Troubleshooting.](certificate-troubleshooting.md)
+Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates provided by the recognized CA. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
 
 !===
 ! Placeholder ! Description
@@ -260,7 +260,7 @@ Reminder of the Cert Prerequisite: The certificate files must be in PEM format. 
 ! The path to the private key for your certificate.
 
 ! `<RANCHER_VERSION_TAG>`
-! The release tag of the xref:../../installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
+! The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
 
 !===
 
@@ -298,7 +298,7 @@ Reminder of the Cert Prerequisites:
 ! Placeholder ! Description
 
 ! `<RANCHER_VERSION_TAG>`
-! The release tag of the xref:../../installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
+! The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
 
 ! `<YOUR.DNS.NAME>`
 ! The domain address that you had originally started with
@@ -346,7 +346,7 @@ If you have selected to use the Rancher generated self-signed certificate, you a
 ! Your private registry URL and port.
 
 ! `<RANCHER_VERSION_TAG>`
-! The release tag of the xref:../../installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
+! The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
 
 !===
 
@@ -372,7 +372,7 @@ Privileged access is xref:getting-started/installation-and-upgrade/other-install
 If you have selected to bring your own self-signed certificate, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container and need to have access to the same certificate that you had originally installed with.
 
 [NOTE]
-Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates in the chain. Order your certificates with your certificate first, followed by the intermediates. For an example, see [Certificate Troubleshooting.](certificate-troubleshooting.md)
+Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates in the chain. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
 
 
 !===
@@ -394,7 +394,7 @@ Reminder of the Cert Prerequisite: The certificate files must be in PEM format. 
 ! Your private registry URL and port.
 
 ! `<RANCHER_VERSION_TAG>`
-! The release tag of the xref:../../installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
+! The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
 
 !===
 
@@ -422,7 +422,7 @@ Privileged access is xref:getting-started/installation-and-upgrade/other-install
 If you have selected to use a certificate signed by a recognized CA, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container and need to have access to the same certificates that you had originally installed with.
 
 [NOTE]
-Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates provided by the recognized CA. Order your certificates with your certificate first, followed by the intermediates. For an example, see [Certificate Troubleshooting.](certificate-troubleshooting.md)
+Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates provided by the recognized CA. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
 
 !===
 ! Placeholder ! Description
@@ -440,7 +440,7 @@ Reminder of the Cert Prerequisite: The certificate files must be in PEM format. 
 ! Your private registry URL and port.
 
 ! `<RANCHER_VERSION_TAG>`
-! The release tag of the xref:../../installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
+! The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.md[Rancher version] that you want to upgrade to.
 
 !===
 
@@ -476,7 +476,7 @@ Log into Rancher. Confirm that the upgrade succeeded by checking the version dis
 
 [NOTE]
 ====
-Having network issues in your user clusters following upgrade? See [Restoring Cluster Networking](https://github.com/rancher/rancher-docs/tree/main/archived_docs/en/version-2.0-2.4/getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades/namespace-migration.md).
+Having network issues in your user clusters following upgrade? See https://github.com/rancher/rancher-docs/tree/main/archived_docs/en/version-2.0-2.4/getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades/namespace-migration.md[Restoring Cluster Networking].
 ====
 
 === 6. Clean up Your Old Rancher Server Container
@@ -498,7 +498,8 @@ This is particularly relevant for single-node Docker installations, where Ranche
 === 1. Pre-Upgrade (Recommended)
 
 Before upgrading, while Rancher is still running:
-* Run the `pre-upgrade-hook` cleanup script to delete all RKE1 clusters and templates. You can find the script in the Rancher GitHub repository: [pre-upgrade-hook.sh](https://github.com/rancher/rancher/blob/v2.12.0/chart/scripts/pre-upgrade-hook.sh).
+
+* Run the `pre-upgrade-hook` cleanup script to delete all RKE1 clusters and templates. You can find the script in the Rancher GitHub repository: https://github.com/rancher/rancher/blob/v2.12.0/chart/scripts/pre-upgrade-hook.sh[pre-upgrade-hook.sh].
 * This allows Rancher to clean up associated resources and finalizers. 
 
 === 2. Post-Upgrade Failure Due to Residual RKE1 Resources
@@ -506,7 +507,7 @@ Before upgrading, while Rancher is still running:
 If the upgrade to Rancher v2.12.0 or later is attempted without prior cleanup of RKE1 resources:
 * The upgrade will fail and display an error listing the resource names that are preventing the upgrade.
 * This occurs because Rancher includes validation to detect and block upgrades when unsupported RKE1 resources are still present.
-* To proceed, [rollback](#rolling-back) to the previous Rancher version, delete the identified resources, and then retry after [manual cleanup](#manual-cleanup-after-rollback).
+* To proceed, <<_rolling_back,rollback>> to the previous Rancher version, delete the identified resources, and then retry after <<_manual_cleanup_after_rollback,manual cleanup>>.
 
 [NOTE]
 ====
@@ -519,8 +520,8 @@ Users should perform the following steps after rolling back to a previous Ranche
 
 * **Manually delete** the resources listed in the upgrade error message (e.g., RKE1 clusters, NodeTemplates, ClusterTemplates).
 * If deletion is blocked due to **finalizers**, edit the resources and remove the `metadata.finalizers` field.
-* If a **validating webhook** prevents deletion (e.g., for the `system-project`), please refer to the [Bypassing the Webhook](../../../../reference-guides/rancher-webhook.md#bypassing-the-webhook) documentation.
+* If a **validating webhook** prevents deletion (e.g., for the `system-project`), please refer to the xref:reference-guides/rancher-webhook.adoc#_bypassing_the_webhook[Bypassing the Webhook] documentation.
 
 == Rolling Back
 
-If your upgrade does not complete successfully, you can roll back Rancher server and its data back to its last healthy state. For more information, see [Docker Rollback](roll-back-docker-installed-rancher.md).
+If your upgrade does not complete successfully, you can roll back Rancher server and its data back to its last healthy state. For more information, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc[Docker Rollback].
