--- a/community-docs/v2.13/modules/ROOT/pages/getting-started/quick-start-guides/deploy-rancher-manager/vagrant.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/getting-started/quick-start-guides/deploy-rancher-manager/vagrant.adoc
@@ -11,7 +11,7 @@ The following steps quickly deploy a Rancher Server with a single node cluster a
 
 [CAUTION]
 ====
-The intent of these guides is to quickly launch a sandbox that you can use to evaluate Rancher. These guides are not intended for production environments. For comprehensive setup instructions, see xref:../../installation-and-upgrade/installation-and-upgrade.adoc[Installation].
+The intent of these guides is to quickly launch a sandbox that you can use to evaluate Rancher. These guides are not intended for production environments. For comprehensive setup instructions, see xref:getting-started/installation-and-upgrade/installation-and-upgrade.adoc[Installation].
 ====
 
 
@@ -45,7 +45,7 @@ Vagrant requires plugins to create VirtualBox VMs. Install them with the followi
 
 === What's Next?
 
-Use Rancher to create a deployment. For more information, see xref:../deploy-workloads/deploy-workloads.adoc[Creating Deployments].
+Use Rancher to create a deployment. For more information, see xref:getting-started/quick-start-guides/deploy-workloads/index.adoc[Creating Deployments].
 
 == Destroying the Environment
 
