--- a/community-docs/v2.13/modules/ROOT/pages/how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/index.adoc
@@ -7,7 +7,7 @@ endif::[]
 :community-path: how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/prometheus-federator-guides
 :product-path:
 
-* xref:enable-prometheus-federator.adoc[Enable Prometheus Operator]
-* xref:uninstall-prometheus-federator.adoc[Uninstall Prometheus Operator]
-* xref:customize-grafana-dashboards.adoc[Customize Grafana Dashboards]
-* xref:set-up-workloads.adoc[Set Up Workloads]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/enable-prometheus-federator.adoc[Enable Prometheus Operator]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/uninstall-prometheus-federator.adoc[Uninstall Prometheus Operator]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/customize-grafana-dashboards.adoc[Customize Grafana Dashboards]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/prometheus-federator-guides/set-up-workloads.adoc[Set Up Workloads]
