--- a/community-docs/v2.13/modules/ROOT/pages/integrations-in-rancher/logging/custom-resource-configuration/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/integrations-in-rancher/logging/custom-resource-configuration/index.adoc
@@ -9,5 +9,5 @@ endif::[]
 
 The following Custom Resource Definitions are used to configure logging:
 
-* xref:flows-and-clusterflows.adoc[Flow and ClusterFlow]
-* xref:outputs-and-clusteroutputs.adoc[Output and ClusterOutput]
+* xref:integrations-in-rancher/logging/custom-resource-configuration/flows-and-clusterflows.adoc[Flow and ClusterFlow]
+* xref:integrations-in-rancher/logging/custom-resource-configuration/outputs-and-clusteroutputs.adoc[Output and ClusterOutput]
