--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/cli-with-rancher/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/cli-with-rancher/index.adoc
@@ -7,4 +7,4 @@ endif::[]
 :community-path: reference-guides/cli-with-rancher/cli-with-rancher
 :product-path:
 
-Interact with Rancher using command line interface (CLI) tools from your workstation. The following docs will describe the xref:rancher-cli.adoc[Rancher CLI] and xref:kubectl-utility.adoc[kubectl Utility].
+Interact with Rancher using command line interface (CLI) tools from your workstation. The following docs will describe the xref:reference-guides/cli-with-rancher/rancher-cli.adoc[Rancher CLI] and xref:reference-guides/cli-with-rancher/kubectl-utility.adoc[kubectl Utility].
