--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/index.adoc
@@ -7,4 +7,4 @@ endif::[]
 :community-path: reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/machine-configuration
 :product-path:
 
-Machine configuration is the arrangement of resources assigned to a virtual machine. Please see the docs for xref:amazon-ec2.adoc[Amazon EC2], xref:digitalocean.adoc[DigitalOcean], xref:google-gce.adoc[Google GCE], and xref:azure.adoc[Azure] to learn more.
+Machine configuration is the arrangement of resources assigned to a virtual machine. Please see the docs for xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/amazon-ec2.adoc[Amazon EC2], xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/digitalocean.adoc[DigitalOcean], xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/google-gce.adoc[Google GCE], and xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/azure.adoc[Azure] to learn more.
