--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/cluster-configuration/rancher-server-configuration/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/cluster-configuration/rancher-server-configuration/index.adoc
@@ -7,10 +7,10 @@ endif::[]
 :community-path: reference-guides/cluster-configuration/rancher-server-configuration/rancher-server-configuration
 :product-path:
 
-* xref:rke2-cluster-configuration.adoc[RKE2 Cluster Configuration]
-* xref:k3s-cluster-configuration.adoc[K3s Cluster Configuration]
-* xref:eks-cluster-configuration.adoc[EKS Cluster Configuration]
-* xref:aks-cluster-configuration.adoc[AKS Cluster Configuration]
-* xref:gke-cluster-configuration/gke-cluster-configuration.adoc[GKE Cluster Configuration]
-* xref:use-existing-nodes/use-existing-nodes.adoc[Use Existing Nodes]
-* xref:sync-clusters.adoc[Sync Clusters]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/rke2-cluster-configuration.adoc[RKE2 Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/k3s-cluster-configuration.adoc[K3s Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/eks-cluster-configuration.adoc[EKS Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/aks-cluster-configuration.adoc[AKS Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/gke-cluster-configuration/index.adoc[GKE Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/use-existing-nodes/use-existing-nodes/use-existing-nodes.adoc[Use Existing Nodes]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/sync-clusters.adoc[Sync Clusters]
