--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/single-node-rancher-in-docker/advanced-options.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/single-node-rancher-in-docker/advanced-options.adoc
@@ -20,7 +20,7 @@ Use the command example to start a Rancher container with your private CA certif
 
 The example below is based on having the CA root certificates in the `/host/certs` directory on the host and mounting this directory on `/container/certs` inside the Rancher container.
 
-Privileged access is xref:../../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
 
 ----
 docker run -d --restart=unless-stopped \
@@ -37,9 +37,9 @@ The API Audit Log records all the user and system transactions made through Ranc
 
 The API Audit Log writes to `/var/log/auditlog` inside the rancher container by default. Share that directory as a volume and set your `AUDIT_LEVEL` to enable the log.
 
-See xref:../../how-to-guides/advanced-user-guides/enable-api-audit-log.adoc[API Audit Log] for more information and options.
+See xref:how-to-guides/advanced-user-guides/enable-api-audit-log.adoc[API Audit Log] for more information and options.
 
-Privileged access is xref:../../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
 
 ----
 docker run -d --restart=unless-stopped \
@@ -63,9 +63,9 @@ docker run -d --restart=unless-stopped \
   rancher/rancher:latest
 ----
 
-Privileged access is xref:../../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
 
-See xref:../../getting-started/installation-and-upgrade/installation-references/tls-settings.adoc[TLS settings] for more information and options.
+See xref:getting-started/installation-and-upgrade/installation-references/tls-settings.adoc[TLS settings] for more information and options.
 
 == Air Gap
 
@@ -89,7 +89,7 @@ docker run -d --restart=unless-stopped \
   rancher/rancher:latest
 ----
 
-Privileged access is xref:../../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
 
 == Running `rancher/rancher` and `rancher/rancher-agent` on the Same Node
 
@@ -108,4 +108,4 @@ docker run -d --restart=unless-stopped \
   rancher/rancher:latest
 ----
 
-Privileged access is xref:../../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
