--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc
@@ -36,7 +36,7 @@ NO_PROXY must be in uppercase to use network range (CIDR) notation.
 
 == Docker Installation
 
-Passing environment variables to the Rancher container can be done using `-e KEY=VALUE` or `--env KEY=VALUE`. Required values for `NO_PROXY` in a xref:../../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc[Docker Installation] are:
+Passing environment variables to the Rancher container can be done using `-e KEY=VALUE` or `--env KEY=VALUE`. Required values for `NO_PROXY` in a xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc[Docker Installation] are:
 
 * `localhost`
 * `127.0.0.1`
@@ -58,7 +58,7 @@ docker run -d --restart=unless-stopped \
   rancher/rancher:latest
 ----
 
-Privileged access is xref:../../getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
+Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
 
 === Air-gapped proxy configuration
 
