--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/deploy-workloads.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/deploy-workloads.adoc
@@ -9,5 +9,11 @@ endif::[]
 
 These guides walk you through the deployment of an application, including how to expose the application for use outside of the cluster.
 
+ifeval::["{build-type}" != "community"]
 * xref:installation-and-upgrade/quick-start/deploy-workloads/workload-ingress.adoc[Workload with Ingress]
 * xref:installation-and-upgrade/quick-start/deploy-workloads/nodeports.adoc[Workload with NodePort]
+endif::[]
+ifeval::["{build-type}" == "community"]
+* xref:getting-started/quick-start-guides/deploy-workloads/workload-ingress.adoc[Workload with Ingress]
+* xref:getting-started/quick-start-guides/deploy-workloads/nodeports.adoc[Workload with NodePort]
+endif::[]
