--- a/community-docs/v2.13/modules/ROOT/pages/getting-started/quick-start-guides/deploy-rancher-manager/azure.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/getting-started/quick-start-guides/deploy-rancher-manager/azure.adoc
@@ -12,7 +12,7 @@ The following steps will quickly deploy a Rancher server on Azure in a single-no
 
 [CAUTION]
 ====
-The intent of these guides is to quickly launch a sandbox that you can use to evaluate Rancher. These guides are not intended for production environments. For comprehensive setup instructions, see xref:../../installation-and-upgrade/installation-and-upgrade.adoc[Installation].
+The intent of these guides is to quickly launch a sandbox that you can use to evaluate Rancher. These guides are not intended for production environments. For comprehensive setup instructions, see xref:getting-started/installation-and-upgrade/installation-and-upgrade.adoc[Installation].
 ====
 
 
@@ -40,7 +40,7 @@ Deploying to Microsoft Azure will incur charges.
  * `azure_client_id` - Microsoft Azure Client ID
  * `azure_client_secret` - Microsoft Azure Client Secret
  * `azure_tenant_id` - Microsoft Azure Tenant ID
- * `rancher_server_admin_password` - Admin password for created Rancher server. See xref:../../installation-and-upgrade/resources/bootstrap-password.adoc#_password_requirements[Setting up the Bootstrap Password] for password requirements.
+ * `rancher_server_admin_password` - Admin password for created Rancher server. See xref:getting-started/installation-and-upgrade/resources/bootstrap-password.adoc#_password_requirements[Setting up the Bootstrap Password] for password requirements.
 . **Optional:** Modify optional variables within `terraform.tfvars`.
 See the https://github.com/rancher/quickstart[Quickstart Readme] and the https://github.com/rancher/quickstart/tree/master/rancher/azure[Azure Quickstart Readme] for more information. Suggestions include:
  * `azure_location` - Microsoft Azure region, choose the closest instead of the default (`East US`)
@@ -71,7 +71,7 @@ Two Kubernetes clusters are deployed into your Azure account, one running Ranche
 
 === What's Next?
 
-Use Rancher to create a deployment. For more information, see xref:../deploy-workloads/deploy-workloads.adoc[Creating Deployments].
+Use Rancher to create a deployment. For more information, see xref:getting-started/quick-start-guides/deploy-workloads/index.adoc[Creating Deployments].
 
 == Destroying the Environment
 
