--- a/community-docs/v2.13/modules/ROOT/pages/getting-started/quick-start-guides/deploy-rancher-manager/gcp.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/getting-started/quick-start-guides/deploy-rancher-manager/gcp.adoc
@@ -12,7 +12,7 @@ The following steps will quickly deploy a Rancher server on GCP in a single-node
 
 [CAUTION]
 ====
-The intent of these guides is to quickly launch a sandbox that you can use to evaluate Rancher. These guides are not intended for production environments. For comprehensive setup instructions, see xref:../../installation-and-upgrade/installation-and-upgrade.adoc[Installation].
+The intent of these guides is to quickly launch a sandbox that you can use to evaluate Rancher. These guides are not intended for production environments. For comprehensive setup instructions, see xref:getting-started/installation-and-upgrade/installation-and-upgrade.adoc[Installation].
 ====
 
 
@@ -36,7 +36,7 @@ Deploying to Google GCP will incur charges.
 . Rename the `terraform.tfvars.example` file to `terraform.tfvars`.
 . Edit `terraform.tfvars` and customize the following variables:
  * `gcp_account_json` - GCP service account file path and file name
- * `rancher_server_admin_password` - Admin password for created Rancher server. See xref:../../installation-and-upgrade/resources/bootstrap-password.adoc#_password_requirements[Setting up the Bootstrap Password] for password requirements.
+ * `rancher_server_admin_password` - Admin password for created Rancher server. See xref:getting-started/installation-and-upgrade/resources/bootstrap-password.adoc#_password_requirements[Setting up the Bootstrap Password] for password requirements.
 . **Optional:** Modify optional variables within `terraform.tfvars`.
 See the https://github.com/rancher/quickstart[Quickstart Readme] and the https://github.com/rancher/quickstart/tree/master/rancher/gcp[GCP Quickstart Readme] for more information.
 Suggestions include:
@@ -67,7 +67,7 @@ Two Kubernetes clusters are deployed into your GCP account, one running Rancher 
 
 === What's Next?
 
-Use Rancher to create a deployment. For more information, see xref:../deploy-workloads/deploy-workloads.adoc[Creating Deployments].
+Use Rancher to create a deployment. For more information, see xref:getting-started/quick-start-guides/deploy-workloads/index.adoc[Creating Deployments].
 
 == Destroying the Environment
 
