--- a/community-docs/v2.13/modules/ROOT/pages/how-to-guides/advanced-user-guides/monitoring-alerting-guides/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/how-to-guides/advanced-user-guides/monitoring-alerting-guides/index.adoc
@@ -7,9 +7,9 @@ endif::[]
 :community-path: how-to-guides/advanced-user-guides/monitoring-alerting-guides/monitoring-alerting-guides
 :product-path:
 
-* xref:enable-monitoring.adoc[Enable monitoring]
-* xref:uninstall-monitoring.adoc[Uninstall monitoring]
-* xref:set-up-monitoring-for-workloads.adoc[Monitoring workloads]
-* xref:customize-grafana-dashboard.adoc[Customizing Grafana dashboards]
-* xref:create-persistent-grafana-dashboard.adoc[Persistent Grafana dashboards]
-* xref:debug-high-memory-usage.adoc[Debugging high memory usage]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/enable-monitoring.adoc[Enable monitoring]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/uninstall-monitoring.adoc[Uninstall monitoring]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/set-up-monitoring-for-workloads.adoc[Monitoring workloads]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/customize-grafana-dashboard.adoc[Customizing Grafana dashboards]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/create-persistent-grafana-dashboard.adoc[Persistent Grafana dashboards]
+* xref:how-to-guides/advanced-user-guides/monitoring-alerting-guides/debug-high-memory-usage.adoc[Debugging high memory usage]
