--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/backup-restore-configuration/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/backup-restore-configuration/index.adoc
@@ -9,7 +9,7 @@ endif::[]
 
 The **Backup: Create** page lets you configure a schedule, enable encryption and specify the storage location for your backups.
 
-You must first xref:../../how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher.adoc[install] the `rancher-backup` operator. After you do so, you can access the **Backup: Create** page:
+You must first xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher.adoc[install] the `rancher-backup` operator. After you do so, you can access the **Backup: Create** page:
 
 == Schedule
 
@@ -56,7 +56,7 @@ To avoid storing them in plaintext, you can use the same `EncryptionConfiguratio
 ====
 When encrypting objects in the backup you must save the `EncryptionConfiguration` file for future use, because it won't be saved by the rancher-backup operator.
 
-For example, when xref:../../how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc[migrating Rancher to a new cluster] the file is used to re-create the secret in the new cluster.
+For example, when xref:how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc[migrating Rancher to a new cluster] the file is used to re-create the secret in the new cluster.
 ====
 
 
@@ -106,7 +106,7 @@ If you use an S3 backup target, make sure that every cluster has its own bucket 
 
 The S3 storage location contains the following configuration fields:
 
-. **Credential Secret** (optional): If you need an AWS access key or secret key to access an S3 bucket, xref:../../how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc[create a secret] using your credentials, with keys and directives named `accessKey` and `secretKey`. The secret can be in any namespace. An example secret is <<Example credentialSecret,here>>. This directive is unnecessary if the nodes running your operator are in EC2 and assigned <<IAM Permissions for EC2 Nodes to Access S3,IAM permissions to access S3>>. The **Credential Secret** dropdown lists secrets in all namespaces.
+. **Credential Secret** (optional): If you need an AWS access key or secret key to access an S3 bucket, xref:how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc[create a secret] using your credentials, with keys and directives named `accessKey` and `secretKey`. The secret can be in any namespace. An example secret is <<Example credentialSecret,here>>. This directive is unnecessary if the nodes running your operator are in EC2 and assigned <<IAM Permissions for EC2 Nodes to Access S3,IAM permissions to access S3>>. The **Credential Secret** dropdown lists secrets in all namespaces.
 . **Bucket Name**: The name of the S3 bucket where backup files will be stored.
 . **Region** (optional): The AWS https://aws.amazon.com/about-aws/global-infrastructure/regions_az/[region] where the S3 bucket is located. This field isn't needed for configuring MinIO.
 . **Folder** (optional): The name of the folder in the S3 bucket where backup files will be stored. Nested folders (e.g., `rancher/cluster1`) are not supported. If this field is left empty, the default behavior is to store the backup files in the root folder of the S3 bucket.
@@ -120,7 +120,7 @@ The S3 storage location contains the following configuration fields:
 | YAML Directive Name | Description | Required
 
 | `credentialSecretName`
-| If you need an AWS access key or secret key to access an S3 bucket, xref:../../how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc[create a secret] using your credentials, with keys and directives named `accessKey` and `secretKey`. The secret can be in any namespace. An example secret is <<Example credentialSecret,here>>. This directive is unnecessary if the nodes running your operator are in EC2 and assigned <<IAM Permissions for EC2 Nodes to Access S3,IAM permissions to access S3>>.
+| If you need an AWS access key or secret key to access an S3 bucket, xref:how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc[create a secret] using your credentials, with keys and directives named `accessKey` and `secretKey`. The secret can be in any namespace. An example secret is <<Example credentialSecret,here>>. This directive is unnecessary if the nodes running your operator are in EC2 and assigned <<IAM Permissions for EC2 Nodes to Access S3,IAM permissions to access S3>>.
 |
 
 | `credentialSecretNamespace`
@@ -247,4 +247,4 @@ After the role is created, and you have attached the corresponding instance prof
 
 == Examples
 
-For example Backup custom resources, refer to xref:examples.adoc#_backup[this page.]
+For example Backup custom resources, refer to xref:reference-guides/backup-restore-configuration/examples.adoc#_backup[this page.]
