--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/best-practices/rancher-managed-clusters/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/best-practices/rancher-managed-clusters/index.adoc
@@ -9,20 +9,20 @@ endif::[]
 
 == Logging
 
-Refer to xref:logging-best-practices.adoc[this guide] for our recommendations for cluster-level logging and application logging.
+Refer to xref:reference-guides/best-practices/rancher-managed-clusters/logging-best-practices.adoc[this guide] for our recommendations for cluster-level logging and application logging.
 
 == Monitoring
 
-Configuring sensible monitoring and alerting rules is vital for running any production workloads securely and reliably. Refer to this xref:monitoring-best-practices.adoc[guide] for our recommendations.
+Configuring sensible monitoring and alerting rules is vital for running any production workloads securely and reliably. Refer to this xref:reference-guides/best-practices/rancher-managed-clusters/monitoring-best-practices.adoc[guide] for our recommendations.
 
 == Disconnected clusters
 
-Rancher supports managing clusters that may not always be online due to network disruptions, control plane availability, or because all cluster nodes are down. Refer to this xref:disconnected-clusters.adoc[guide] for our recommendations.
+Rancher supports managing clusters that may not always be online due to network disruptions, control plane availability, or because all cluster nodes are down. Refer to this xref:reference-guides/best-practices/rancher-managed-clusters/disconnected-clusters.adoc[guide] for our recommendations.
 
 == Tips for Setting Up Containers
 
-Running well-built containers can greatly impact the overall performance and security of your environment. Refer to this xref:tips-to-set-up-containers.adoc[guide] for tips.
+Running well-built containers can greatly impact the overall performance and security of your environment. Refer to this xref:reference-guides/best-practices/rancher-managed-clusters/tips-to-set-up-containers.adoc[guide] for tips.
 
 == Best Practices for Rancher Managed VMware vSphere Clusters
 
-This xref:rancher-managed-clusters-in-vsphere.adoc[guide] outlines a reference architecture for provisioning downstream Rancher clusters in a vSphere environment, in addition to standard vSphere best practices as documented by VMware.
+This xref:reference-guides/best-practices/rancher-managed-clusters/rancher-managed-clusters-in-vsphere.adoc[guide] outlines a reference architecture for provisioning downstream Rancher clusters in a vSphere environment, in addition to standard vSphere best practices as documented by VMware.
