--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/cluster-configuration/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/cluster-configuration/index.adoc
@@ -9,17 +9,17 @@ endif::[]
 
 After you provision a Kubernetes cluster using Rancher, you can still edit options and settings for the cluster.
 
-For information on editing cluster membership, go to xref:../../how-to-guides/new-user-guides/manage-clusters/access-clusters/add-users-to-clusters.adoc[this page.]
+For information on editing cluster membership, go to xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/add-users-to-clusters.adoc[this page.]
 
 == Cluster Configuration References
 
 The cluster configuration options depend on the type of Kubernetes cluster:
 
-* xref:rancher-server-configuration/rke2-cluster-configuration.adoc[RKE2 Cluster Configuration]
-* xref:rancher-server-configuration/k3s-cluster-configuration.adoc[K3s Cluster Configuration]
-* xref:rancher-server-configuration/eks-cluster-configuration.adoc[EKS Cluster Configuration]
-* xref:rancher-server-configuration/gke-cluster-configuration/gke-cluster-configuration.adoc[GKE Cluster Configuration]
-* xref:rancher-server-configuration/aks-cluster-configuration.adoc[AKS Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/rke2-cluster-configuration.adoc[RKE2 Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/k3s-cluster-configuration.adoc[K3s Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/eks-cluster-configuration.adoc[EKS Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/gke-cluster-configuration/gke-cluster-configuration.adoc[GKE Cluster Configuration]
+* xref:reference-guides/cluster-configuration/rancher-server-configuration/aks-cluster-configuration.adoc[AKS Cluster Configuration]
 
 == Cluster Management Capabilities by Cluster Type
 
