--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/monitoring-v2-configuration/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/monitoring-v2-configuration/index.adoc
@@ -9,8 +9,8 @@ endif::[]
 
 The following sections will explain important options essential to configuring Monitoring V2 in Rancher:
 
-* xref:receivers.adoc[Receiver Configuration]
-* xref:routes.adoc[Route Configuration]
-* xref:servicemonitors-and-podmonitors.adoc[ServiceMonitor and PodMonitor Configuration]
-* xref:helm-chart-options.adoc[Helm Chart Options]
-* xref:examples.adoc[Examples]
+* xref:reference-guides/monitoring-v2-configuration/receivers.adoc[Receiver Configuration]
+* xref:reference-guides/monitoring-v2-configuration/routes.adoc[Route Configuration]
+* xref:reference-guides/monitoring-v2-configuration/servicemonitors-and-podmonitors.adoc[ServiceMonitor and PodMonitor Configuration]
+* xref:reference-guides/monitoring-v2-configuration/helm-chart-options.adoc[Helm Chart Options]
+* xref:reference-guides/monitoring-v2-configuration/examples.adoc[Examples]
