--- a/community-docs/v2.13/modules/ROOT/pages/reference-guides/single-node-rancher-in-docker/index.adoc
+++ b/community-docs/v2.13/modules/ROOT/pages/reference-guides/single-node-rancher-in-docker/index.adoc
@@ -7,4 +7,4 @@ endif::[]
 :community-path: reference-guides/single-node-rancher-in-docker/single-node-rancher-in-docker
 :product-path:
 
-The following docs will discuss xref:http-proxy-configuration.adoc[HTTP proxy configuration] and xref:advanced-options.adoc[advanced options] for Docker installs.
+The following docs will discuss xref:reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc[HTTP proxy configuration] and xref:reference-guides/single-node-rancher-in-docker/advanced-options.adoc[advanced options] for Docker installs.
